trying to fix scroll on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ body,html {
     background:black;
     max-width:100%;
     overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .header {
